syntax = "proto2";

package com.scalableminds.webknossos.tracingstore;

import "geometry.proto";

message VolumeTracing {
    enum ElementClass {
        uint8 = 1;
        uint16 = 2;
        uint24 = 3;
        uint32 = 4;
        uint64 = 8;
    }

    optional int64 activeSegmentId = 1;
    required BoundingBox boundingBox = 2;
    required int64 createdTimestamp = 3;
    required string dataSetName = 4;
    required Point3D editPosition = 5;
    required Vector3D editRotation = 6;
    required ElementClass elementClass = 7;
    optional string fallbackLayer = 8;
    required int64 largestSegmentId = 9;
    required int64 version = 10;
    required double zoomLevel = 11;
    optional BoundingBox userBoundingBox = 12;
    repeated NamedBoundingBox userBoundingBoxes = 13;
}

message VolumeTracingOpt {
    optional VolumeTracing tracing = 1;
}

message VolumeTracings {
    repeated VolumeTracingOpt tracings = 1;
}
